(WIP) testing/livepatch: rename and move target modules
Move the target module test_klp_callbacks_mod and its "busy"
counterpart, test_klp_callbacks_busy, from callback/ to the basic/ test
directory.  At the same time, simplify their names a bit to just
"test_klp_module" and "test_klp_busy_module" respectively.  These
changes will make make it easier to reuse these module for other test
cases going forward.

Signed-off-by: Joe Lawrence <joe.lawrence@redhat.com>

--- a/lib/livepatch/basic/Makefile
+++ b/lib/livepatch/basic/Makefile
@@ -3,4 +3,10 @@
 # Makefile for livepatch basic functionality test code.
 
 obj-$(CONFIG_TEST_LIVEPATCH) += \
-	test_klp_livepatch.o
+	test_klp_livepatch.o \
+	test_klp_busy_module.o \
+	test_klp_module.o
+
+# Target modules to be livepatched require CC_FLAGS_FTRACE
+CFLAGS_test_klp_busy_module.o		+= $(CC_FLAGS_FTRACE)
+CFLAGS_test_klp_module.o		+= $(CC_FLAGS_FTRACE)
